--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
     image: remote-host
     build:
       context: centos7
-    # volumes:
-    #   - $PWD/aws-s3.sh:/tmp/script.sh
+    volumes:
+      - $PWD/aws-s3.sh:/tmp/copy.sh
     networks:
       - net
   db_host:
